# buster_block_project

./: .gitignore  .sqlfluffignore  README.md  pyproject.toml  requirements.txt
config/: db_config.py  db_connection.py
data/: address.csv
data/processed/: cleaned_rental.csv  monthly_revenue.csv  revenue_by_rating.csv
data/raw/: actor.csv  app_id.csv  customer.csv  staff.csv
docs/: README.md
docs/notebooks/: alex_notebook.ipynb  by_country.ipynb  category_popularity.ipynb  device_type_analysis.ipynb  monthly_revenue.ipynb  revenue_by_rating.ipynb  seasonal_rental_patterns.ipynb
docs/slides/: Presentation.md
src/extract/: extract.py
src/sql/: combined_table_device_type.sql  device_type_joins.sql  device_type_metrics.sql  placeholder.sql  test.sql
tests/: run_tests.py
