[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BUSTER_BLOCK_PROJECT"
version = "0.1.0"
description = "An ETL project for extracting, transforming, and loading data."
authors = [{name = "Praise"}, {name = "Nasif"}, {name = "Alex I"}, {name = "Umair"}, {name = "Jake D"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/praiseOjay/buster_block_project"

[project.scripts]
run_etl = "scripts.run_etl:main"
run_tests = "tests.run_tests:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}